@@ -1,5 +1,6 @@
 0.10
  - Update SYNOPSIS section in doc.
+ - Update LICENSE AND COPYRIGHT section in doc.
 
 0.09 2020-01-11T23:37:55+01:00
  - Change my github username.
